2014-04-29  Karl Berry  <karl@tug.org>

	* simpletypes.h: new file, defining just boolean, string, address, etc.
	* pathsearch.h: restore #include of str-llist.h before types.h,
	as it should be.
	* str-llist.h: #include simpletypes.h instead of types.h.
	* types.h: #include simpletypes.h.

2014-04-22  Karl Berry  <karl@tug.org>

	* texmf.cnf (guess_input_kanji_encoding): set to 1,
	per Akira and Norbert.

2014-04-17  Karl Berry  <karl@tug.org>

	* version.ac: 6.2.0 (without the dev) for 2014 pretest.
	* NEWS,
	* texmf.cnf,
	* kpsewhich.c: 2014.

	* texmf.cnf (TEXINPUTS.pdfx{latex,mex,tex}): this engine has
	not existed for a long time.  Remove.
	(TEXINPUTS.luajittex): same as .luatex.

2014-04-09  Karl Berry  <karl@tug.org>

	* pathsearch.h: with deep regret, #include types.h before
	str-llist.h, since otherwise str_llist_type is not defined
	in its use within types.h and a simple #include
	<kpathsea/pathsearch.h> fails.  Reported by Norman Gray,
	tex-k 14 Apr 2013 12:23:50,
	http://tug.org/pipermail/tex-k/2013-April/002496.html

2014-04-09  Luigi Scarso  <luigi.scarso@gmail.com>

	* mingw32.h [MinGW64]: Avoid warning due to redefining popen.

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac, getopt.h: Revert previous change.
	Cygwin system getopt() is incompatible with the GNU version.

2014-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Use Cygwin system getopt().
	* getopt.h: Avoid to redeclare the getopt API.

2014-02-08  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch]: Add a new function win32_putc().
	(Windows only)

2014-01-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* kpsewhich.c : [WIN32 only] progname should be kpse->program_name
	since progname can be NULL.

2014-01-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* knj.c: Drop unused variable (avoid warning).

2014-01-25  TANAKA Takuji  <KXD02663@nifty.ne.jp>

	* knj.[ch]: Add a new function win32_getc(), win32_ungetc(),